--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,11 @@
     	<artifactId>okhttp</artifactId>
     	<version>4.9.0</version>
 	</dependency>
-    
+    <dependency>
+	<groupId>org.swinglabs.swingx</groupId>
+	<artifactId>swingx-core</artifactId>
+	<version>1.6.5-1</version>
+</dependency>
   </dependencies>
   
   <build>
