--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Owner 2/tools/jdatepicker-1.3.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
